--- a/frontend/src/LeftSideBar/LeftSideBar.css
+++ b/frontend/src/LeftSideBar/LeftSideBar.css
@@ -4,7 +4,6 @@
 
    display: flex;
    flex-flow: column nowrap;
-   z-index: 1;
 }
 
 #lsidebar h3 {
