--- a/frontend/src/Panel/Panel.css
+++ b/frontend/src/Panel/Panel.css
@@ -4,7 +4,6 @@
    box-shadow: 6px 6px 10px 0 var(--shadow-color);
    border: 1px solid var(--shadow-color);
    /* border-radius: .5em; */
-   z-index: 1;
 
    display: flex;
    flex-flow: column nowrap;
